<package>
  <name>mra7a_tutorials</name>
  <version>1.0.0</version>
  <description>This stack is used to show some demos for controlling the mra7a by ROS. </description>

  <maintainer email="mengnanli@aliyun.com">lmn</maintainer>

  <license>BSD</license>

  <author>lmn</author>

  <buildtool_depend>catkin</buildtool_depend>


  <run_depend>brain_control</run_depend>
  <run_depend>joystick_control</run_depend>
  <run_depend>moveit_visual_tools</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>mra7a_random_motion</run_depend>

  <export>
    <metapackage/>
  </export>
</package>
