<package>
  <name>brain_control</name>
  <version>1.0.0</version>
  <description>This stack is used to control mra7a by brain.</description>

  <maintainer email="mengnanli@aliyun.com">lmn</maintainer>

  <license>BSD</license>

  <author>lmn</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>detect_ik_solution</run_depend>
  <run_depend>marker_control_python</run_depend>
  <run_depend>message_router</run_depend>
 

  <export>
    <metapackage/>
  </export>
</package>
