<package>
  <name>joy_control</name>
  <version>0.7.5</version>
  <description>joy_control</description>

  <author email="mengnanli@aliyun.com">LMN</author>

  <maintainer email="mengnanli@aliyun.com">LMN</maintainer>


  <license>BSD</license>


  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>pkg-config</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rviz</build_depend>
  <build_depend>moveit_ros_planning_interface</build_depend>
  <build_depend>moveit_ros_warehouse</build_depend>
  <build_depend>moveit_ros_robot_interaction</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>interactive_markers</build_depend>
  <build_depend>geometric_shapes</build_depend>
  <build_depend>object_recognition_msgs</build_depend>
  <build_depend>moveit_ros_perception</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>rospy</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>moveit_ros_planning_interface</run_depend>
  <run_depend>moveit_ros_warehouse</run_depend>
  <run_depend>moveit_ros_robot_interaction</run_depend>
  <run_depend>pluginlib</run_depend>
  <run_depend>interactive_markers</run_depend>
  <run_depend>geometric_shapes</run_depend>
  <run_depend>object_recognition_msgs</run_depend>
  <run_depend>moveit_ros_perception</run_depend>
  <run_depend>rospy</run_depend>

</package>
