<package>
  <name>joystick_control</name>
  <version>1.0.0</version>
  <description>This stack is used to control mra7a by joystick.</description>

  <maintainer email="mengnanli@aliyun.com">lmn</maintainer>

  <license>BSD</license>

  <author>lmn</author>

  <buildtool_depend>catkin</buildtool_depend>


  <run_depend>ik_optimal_handler</run_depend>
  <run_depend>joy_control_python</run_depend>
  <run_depend>joystick_control_server</run_depend>
  

  <export>
    <metapackage/>
  </export>
</package>
